Port Forge support for Minecraft 1.20.6